[Uptime] add fields for browser throttling on synthetic monitors
This commit allows the agent's configuration to specify what should be
the download speed, upload speed, and latency for a particular monitor.

This PR is related to elastic/kibana#118594.

--- a/packages/synthetics/data_stream/browser/agent/stream/browser.yml.hbs
+++ b/packages/synthetics/data_stream/browser/agent/stream/browser.yml.hbs
@@ -6,6 +6,7 @@ service.name: {{service.name}}
 {{/if}}
 schedule: {{schedule}}
 timeout: {{timeout}}
+throttling: {{#if throttling.download_speed}}{{throttling.download_speed}}d/{{/if}}{{#if throttling.upload_speed}}{{throttling.upload_speed}}u/{{/if}}{{#if throttling.latency}}{{throttling.latency}}l{{/if}}
 {{#if tags}}
 tags: {{tags}}
 {{/if}}
